fixing cards aligning

--- a/src/components/BookCategoryList/book-category-list.scss
+++ b/src/components/BookCategoryList/book-category-list.scss
@@ -2,7 +2,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding-left: 20px;
+  padding: 0 20px 0 0;
 
   .book__item-container {
     display: flex;
