--- a/src/components/BookListBadge/book-list-badge.scss
+++ b/src/components/BookListBadge/book-list-badge.scss
@@ -1,5 +1,6 @@
 .badge__container {
   width: 95%;
+  padding-left: 20px;
 
   .collection-item.item-badge {
     display: flex;
